# ZeroHostCopyInference

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  vcpkg.json
.github/workflows/: docker-publish.yml
include/: AnnotatorKernels.h  BatchData.h  BatchDetections.h  Block.h  DetectionRaw.h  DetectorKernels.h  FFmpegSource.h  FFmpegSourceKernels.h  FrameResourses.h  InferencePipeline.h  Interfaces.h  NVJpegSink.h  NVJpegSinkKernels.h  ObjectTracker.h  ObjectTrackerKernels.h  OnnxDetector.h  PerformanceTimer.h  SafeQueue.h  StubDetector.h  TrtDetector.h  helpers.h
src/: Block.cu  DetectorKernels.cu  FFmpegSource.cpp  FFmpegSourceKernels.cu  InferencePipeline.cpp  NVJpegSink.cu  NVJpegSinkKernels.cu  ObjectTracker.cpp  ObjectTrackerKernels.cu  OnnxDetector.cpp  StubDetector.cpp  TrtDetector.cpp  main.cpp
tests/: BlockTests.h  FFMpegSourceTests.h  HelpersTests.h  InferencePipelineTests.h  NVJpegSinkTests.h  PerformanceTimerTests.h  SafeQueueTests.h  StubDetectorTests.h  main.cpp
